force-app/main/default/objects/Flight__c/fields/arrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>arrivalAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>arrivalAirport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (arrivalAirport)</relationshipLabel>
    <relationshipName>Flights1</relationshipName>
    <type>Lookup</type>
</CustomField>