force-app/main/default/objects/Flight__c/fields/departureAirport__c.field-meta.xml
<CustomField>
    <fullName>departureAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>departureAirport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>