force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>arrivalAirport__c</columns>
    <columns>departureAirport__c</columns>
    <columns>Destination__c</columns>
    <columns>Distance__c</columns>
    <columns>Origin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>